--- a/src/styles/InfoSection.css
+++ b/src/styles/InfoSection.css
@@ -263,7 +263,7 @@
   }
 
   .info-content {
-    margin-top: 220px;
+    margin-top: 40px;
   }
 
   .location-title {
@@ -304,7 +304,7 @@
   }
 
   .info-content {
-    margin-top: 180px;
+    margin-top:30px;
     padding: 0 15px;
   }
 
@@ -350,7 +350,7 @@
   }
 
   .info-content {
-    margin-top: 160px;
+    margin-top: 20px;
   }
 
   .location-title .title-oldcm {
